<resources>
    <string name="app_name">RoleMe</string>
    <!-- Strings related to login -->
    <string name="prompt_name">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="don_t_have_an_account">Don`t have an account?</string>
    <string name="login">Login</string>
    <string name="invalid_email">Invalid email</string>
    <string name="error_user_id">ERROR</string>
    <string name="error_registering">Error:</string>
    <string name="sign_out">Sign out</string>
    <string name="new_message">New message</string>
    <string name="select_user">Select user</string>
    <string name="database_url">https://roleme-ef88d-default-rtdb.europe-west1.firebasedatabase.app/</string>
    <string name="error_new_msg">Error:</string>
    <string name="error_new_msg_auth">Error: not logged in</string>
</resources>